--- a/server/src/main/resources/application-dev.yml
+++ b/server/src/main/resources/application-dev.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/online_judge
+    url: jdbc:mysql://127.0.0.1:3306/open_transcribe
     username: root
     password: 5626%%..
   # Redis 配置
