--- a/server/application/src/main/resources/application-dev.yml
+++ b/server/application/src/main/resources/application-dev.yml
@@ -61,7 +61,7 @@ knife4j:
       default:
         api-rule: package
         api-rule-resources:
-          - com.carbon.controller
+          - com.carbon
 com:
   carbon:
     minio:
