--- a/server/application/src/main/resources/application.yml
+++ b/server/application/src/main/resources/application.yml
@@ -2,6 +2,10 @@
 spring:
   application:
     name: server
+  servlet:
+    multipart:
+      max-file-size: 700MB
+      max-request-size: 700MB
   # 默认 dev 环境
   profiles:
     active: dev
