--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -4,10 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --open",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
-    "generate:api": "openapi --input http://127.0.0.1:8101/api/v2/api-docs --output src/generated --client axios"
+    "generate:api": "openapi --input http://127.0.0.1:8101/api/v2/api-docs --output generated --client axios"
   },
   "dependencies": {
     "axios": "^1.11.0",
