--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -10,6 +10,7 @@
     "generate:api": "openapi --input http://127.0.0.1:8101/api/v2/api-docs --output generated --client axios"
   },
   "dependencies": {
+    "@vue/eslint-config-prettier": "^10.2.0",
     "axios": "^1.11.0",
     "form-data": "^4.0.4",
     "pinia": "^3.0.3",
@@ -21,6 +22,7 @@
     "@arco-design/web-vue": "^2.57.0",
     "@types/node": "^24.3.1",
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.35.0",
