--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -7,7 +7,7 @@
     "dev": "vite --open",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
-    "generate:api": "openapi --input http://127.0.0.1:8101/api/v2/api-docs --output generated --client axios"
+    "generate:api": "openapi --input http://127.0.0.1:8101/api/v2/api-docs --output generated --client axios --exportSchemas true --remove-base-path"
   },
   "dependencies": {
     "@vue/eslint-config-prettier": "^10.2.0",
