feat(audio): Adds audio transcription functionality and integrates with RocketMQ message queues.
- Modify the development environment configuration file to update the MySQL, Redis, and MinIO connection information.
- Add RocketMQ configuration, including producer and consumer parameters.
- Inject AudioProducer into AudioFileController and add a transcription API.
- Implement the transcribe method of AudioFileService to send transcription task messages.
- Create an AudioProducer class to send audio file information to RocketMQ.
- Add the RocketMQ Spring Boot Starter dependency.
- Update the front-end API service to add a call to the transcribe API.
- Implement the transcription task startup logic in UploadContent.vue.

--- a/server/application/src/main/resources/application-dev.yml
+++ b/server/application/src/main/resources/application-dev.yml
@@ -1,13 +1,13 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/open_transcribe
+    url: jdbc:mysql://192.168.172.94:3306/open_transcribe
     username: root
     password: 5626%%..
   # Redis 配置
   redis:
     database: 1
-    host: 127.0.0.1
+    host: 192.168.172.94
     port: 6379
     timeout: 5000
     password: foobared
@@ -65,10 +65,32 @@ knife4j:
 com:
   carbon:
     minio:
-      endPoint: http://127.0.0.1:4568 # minio服务地址
-      bucketName: carbon  #文件库名称
-      accessKey: minio_h2tzp6 # 用户名
-      secretKey: minio_Sfh2Zr # 密码 密码
+      endPoint: http://192.168.172.209:9998
+      bucketName: asr
+      accessKey: tiger
+      secretKey: tiger123
     snowflake:
       dataCenterId: 0
       workerId: 1
+
+rocketmq:
+  consumer:
+    group: audio-producer-group
+    # 一次拉取消息最大值，注意是拉取消息的最大值而非消费最大值
+    pull-batch-size: 10
+  name-server: 192.168.172.214:9876
+  producer:
+    # 发送同一类消息的设置为同一个group，保证唯一
+    group: springboot_producer_group
+    # 发送消息超时时间，默认3000
+    sendMessageTimeout: 10000
+    # 发送消息失败重试次数，默认2
+    retryTimesWhenSendFailed: 2
+    # 异步消息重试此处，默认2
+    retryTimesWhenSendAsyncFailed: 2
+    # 消息最大长度，默认1024 * 1024 * 4(默认4M)
+    maxMessageSize: 4096
+    # 压缩消息阈值，默认4k(1024 * 4)
+    compressMessageBodyThreshold: 4096
+    # 是否在内部发送失败时重试另一个broker，默认false
+    retryNextServer: false
