feat: enhance speech transcription and message processing capabilities
- Improve transcription accuracy with initial prompt for Chinese language context
- Resolve mixed Simplified/Traditional Chinese output issues
- Add proper Chinese punctuation handling
- Implement task start and end time tracking
- Enhance result message structure with complete timing information for business consumers

--- a/forwarder/config.yml
+++ b/forwarder/config.yml
@@ -5,7 +5,7 @@ rocketmq:
   topic: "asr_transfer_topic"            # 订阅的主题
   consumer_group: "asr_consumer_group"  # 消费者组
   tag: "tag_asr_transfer_txt"                      # 订阅的标签
-    # 添加生产者配置
+  # 添加生产者配置
   producer_group: "asr_producer_group" # 生产者组
   send_topic: "asr_result_topic"       # 发送结果的主题
 # 线程池配置
@@ -13,10 +13,10 @@ thread_pool:
   max_workers: 10
 # MinIO配置
 minio:
-  endpoint: "192.168.172.209:9998"
+  endpoint: "192.168.172.214:9998"
   access_key: "tiger"
   secret_key: "tiger123"
   secure: false  # 是否使用HTTPS
 # Whisper模型配置
 whisper:
-  model_type: "base"  # 可选: tiny, base, small, medium, large,turbo
+  model_type: "large-v3-turbo"  # 可选: tiny, base, small, medium, large-v1,large-v2,large-v3,large,large-v3-turbo,turbo
