--- a/server/application/src/main/resources/application-dev.yml
+++ b/server/application/src/main/resources/application-dev.yml
@@ -1,13 +1,13 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.172.94:3306/open_transcribe
+    url: jdbc:mysql://127.0.0.1:3306/open_transcribe
     username: root
     password: 5626%%..
   # Redis 配置
   redis:
     database: 1
-    host: 192.168.172.94
+    host: 127.0.0.1
     port: 6379
     timeout: 5000
     password: foobared
@@ -65,10 +65,10 @@ knife4j:
 com:
   carbon:
     minio:
-      endPoint: http://192.168.172.214:9998
+      endPoint: http://127.0.0.1:9000
       bucketName: asr
-      accessKey: tiger
-      secretKey: tiger123
+      accessKey: minio_h2tzp6
+      secretKey: minio_Sfh2Zr
     snowflake:
       dataCenterId: 0
       workerId: 1
@@ -78,7 +78,7 @@ rocketmq:
     group: audio-producer-group
     # 一次拉取消息最大值，注意是拉取消息的最大值而非消费最大值
     pull-batch-size: 10
-  name-server: 192.168.172.214:9876
+  name-server: 127.0.0.1:9876
   producer:
     # 发送同一类消息的设置为同一个group，保证唯一
     group: springboot_producer_group
@@ -94,3 +94,6 @@ rocketmq:
     compressMessageBodyThreshold: 4096
     # 是否在内部发送失败时重试另一个broker，默认false
     retryNextServer: false
+grpc:
+  server:
+    port: 50051
