feat(websocket): Implement notification function when audio transcription is completed

--- a/server/system/pom.xml
+++ b/server/system/pom.xml
@@ -9,6 +9,10 @@
     <artifactId>system</artifactId>
     <name>system</name>
     <dependencies>
-
+        <!-- websocket -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
     </dependencies>
 </project>
